--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,4 +12,5 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
       - run: npm install
+      - run: git config user.name "$GITHUB_ACTOR" && git config user.email "$GITHUB_ACTOR@github-deploy.com"
       - run: npm run deploy
