--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Install dependencies
         run: npm install
       - name: Build application for deployment
-          npm run build:gh-pages
+        run: npm run build:gh-pages
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
