--- a/package.json
+++ b/package.json
@@ -28,7 +28,13 @@
     "url": "https://github.com/Minivera/carleton-web-dev/issues"
   },
   "homepage": "https://github.com/Minivera/carleton-web-dev#readme",
-  "dependencies": {},
+  "dependencies": {
+    "classnames": "^2.2.6",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "todomvc-app-css": "^2.3.0",
+    "todomvc-common": "^1.0.5"
+  },
   "devDependencies": {
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.11.0",
