Fix the pathing problems with github pages

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
       "publicUrl": "./"
     },
     "gh-pages": {
-      "publicUrl": "."
+      "publicUrl": "/carleton-web-dev/"
     }
   },
   "author": "Minivera",
