--- a/package.json
+++ b/package.json
@@ -29,11 +29,14 @@
   },
   "homepage": "https://github.com/Minivera/carleton-web-dev#readme",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/react-fontawesome": "^0.1.9",
     "classnames": "^2.2.6",
+    "gravatar": "^1.8.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "todomvc-app-css": "^2.3.0",
-    "todomvc-common": "^1.0.5"
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
