Added web components TODO example app

--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "bulma": "^0.8.2",
     "classnames": "^2.2.6",
     "gravatar": "^1.8.0",
+    "haunted": "^4.7.0",
+    "lit-html": "^1.2.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
