Fix the storybook commands

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start:storybook:react": "start-storybook -c src/react-course-website/.storybook",
     "start:storybook:wc": "start-storybook -c src/wc-course-website/.storybook",
     "build": "parcel build src/index.html",
-    "build:storybook:react": "build-storybook src/react-course-website/.storybook -o dist/react-storybook",
-    "build:storybook:wc": "build-storybook src/wc-course-website/.storybook -o dist/wc-storybook",
+    "build:storybook:react": "build-storybook -c src/react-course-website/.storybook -o dist/react-storybook",
+    "build:storybook:wc": "build-storybook -c src/wc-course-website/.storybook -o dist/wc-storybook",
     "build:gh-pages": "parcel build src/index.html --target gh-pages && npm run build:storybook:react && npm run build:storybook:wc",
     "lint": "eslint 'src/**/*.{js,jsx}'",
     "deploy": "npm run build:gh-pages && gh-pages -d dist",
