--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
         run: npm run build:gh-pages
       - name: Build react storybook
         run: npm run build:storybook:react
-      - name: Build react web components
+      - name: Build web components storybook
         run: npm run build:storybook:wc
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
