--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
+      - uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
       - name: Install dependencies
         run: npm install
       - name: Build application for deployment
@@ -19,6 +22,11 @@ jobs:
         run: npm run build:storybook:react
       - name: Build web components storybook
         run: npm run build:storybook:wc
+      - name: Build Java TODO example app
+        run: |
+          mvn -B package --file src/java-todo/pom.xml
+          mkdir dist/java-todo && cp /target/java-todo-example-1.0.war dist/java-todo/app.war
+          jar xvf app.war
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
