--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,6 +34,10 @@ jobs:
           unzip dist/java-course-website/app.war -d dist/java-course-website
       - name: Copy the benchmark table to dist
         run: cp -r src/project/benchmark-data dist/project/benchmark-data
+      - name: Build the project documentation
+        run: |
+          (cd src/project/docs & npm run build)
+          cp -r src/project/docs/build dist/project/docs
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
