--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "parcel build src/index.html",
     "build:storybook:react": "build-storybook -c src/react-course-website/.storybook -o dist/react-storybook",
     "build:storybook:wc": "build-storybook -c src/wc-course-website/.storybook -o dist/wc-storybook",
+    "build:docs": "(cd src/project/docs && npm run build) && cp -r src/project/docs/build dist/project/docs",
     "build:gh-pages": "parcel build src/index.html --target gh-pages",
     "lint": "eslint 'src/**/*.{js,jsx}'",
     "deploy": "npm run build:gh-pages && gh-pages -d dist",
